--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "arch-react",
   "version": "1.0.0",
-  "description": "Strona firmowa - Architekt Jerzy Migasiewicz",
+  "description": "React Todo Application by Igor Migasiewicz",
   "main": "index.js",
   "scripts": {
     "build": "set NODE_ENV=production && webpack -p",
@@ -12,12 +12,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.2",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
