--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "React Todo Application by Igor Migasiewicz",
   "main": "index.js",
   "scripts": {
-    "build": "set NODE_ENV=production && webpack -p",
-    "macbuild": "export NODE_ENV=production && webpack -p",
-    "start": "set NODE_ENV=development && webpack-dev-server",
-    "macstart": "export NODE_ENV=development && webpack-dev-server"
+    "build": "cross-env NODE_ENV=production webpack -p",
+    "start": "cross-env NODE_ENV=development webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +16,7 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.2",
+    "cross-env": "^5.2.0",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
